Fixed footer to bottom of page, handled overflow

--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@ body {
 }
 @media (min-width: 1024px) {
   body > main {
-    min-height: 65vh;
+    min-height: 40vmax;
   }
 }
 
@@ -304,6 +304,10 @@ textarea:focus {
     padding: 0;
     width: 90%;
   }
+}
+
+.overflow-hider {
+  overflow: hidden;
 }
 
 .container-divider {
